+ z-index: 1 on navbar to avoid problem w/disabled

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img{
 }
 
 .disabled{
-    opacity: 50%;
+    filter: opacity(50%);
 }
 
 .text-lightblue{
@@ -53,10 +53,12 @@ img{
 
 /* navbar */
 
+
 .navbar{
     width: 100vw;
-    position: fixed;
     background-color: #fff;
+    position: fixed;
+    z-index: 1;
 }
 
 #nav-upper-section{
